oer: fix vertical alignment of tags input, fixes #4629
Closes #4629

Merge request studip/studip!3441

--- a/resources/assets/stylesheets/scss/oer.scss
+++ b/resources/assets/stylesheets/scss/oer.scss
@@ -162,6 +162,10 @@ ul.reviews, ol.reviews {
     }
     .oer_tags_container {
         margin-top: 10px;
+
+        .quicksearch_container {
+            vertical-align: middle;
+        }
     }
 
     .level_labels {
